<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/action_maps"
            android:title="@string/maps"
            android:icon="@drawable/baseline_map_24"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_settings"
            android:title="@string/settings"
            android:icon="@drawable/baseline_settings_24"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_logout"
            android:title="@string/logout"
            android:icon="@drawable/baseline_logout_24"
            app:showAsAction="ifRoom"/>
    </group>
</menu>