...
    <string name="text_empty_email">Email cannot be empty</string>
    <string name="password">Password</string>
    <string name="text_hint_password">Enter password</string>
    <string name="text_invalid_password">Passwords must be at least 8 characters long</string>
    <string name="text_register_success">Registration successful</string>

    <string name="logout">Logout</string>
    <string name="text_logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="text_add_new_story">Create a new story</string>
    <string name="text_no_story">No story today. Let\'s share a story about your fun today.</string>

    <string name="token_not_found">Token not found</string>
...
